Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19328

[NETCFGX] every click on the radiobutton adds another unintended property page

    XMLWordPrintable

Details

    Description

      Reproduction steps

      • open the netcfgx dialog tcp/ip-v4 properties IDD_TCPIP_BASIC_DLG
      • now click the fist radio-button "obtain the IP address automatically" (the one that is already activated

      Observed result
      each click will add an additional unintended property-sheet called "Alternate Configuration"
      0.4.15-dev-6961-g8860dc5_unwantedPropSheet.webm
      0.4.15-dev-6961-g8860dc5_unwantedPropSheet.log (nothing is logged when it misbehaves)

      Expected result
      doing the same on 2k3sp2 with the 2k3sp2 netcfgx there will be no such additional property page created. There will always be just a single one with the name "Alternate Configuration"

      Attachments

        Issue Links

          Activity

            People

              ekohl ekohl
              reactosfanboy reactosfanboy
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: