[NETCFGX] Create only one "Alternative Configuration" tab

- Check for the presence of the second tab.
- Remove unnecessary checks for checked radiobuttons.

CORE-19328